# project-beads-sorter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cad/assembly/: README.md
ci/: main.py
configs/: README.md
docs/: conf.py  index.rst  shopping_list.rst  wbs_v1.md
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api/: index.rst
docs/cad/: index.rst
docs/design/: index.rst  system_specifications.rst
docs/requirements/: index.rst  system_requirements.rst
impl/hardware/: README.md
impl/src/: pusher.py  stream.py
impl/src/beads_sorter/ejector/: __init__.py
impl/src/beads_sorter/vision/: __init__.py
resources/: README.md
scripts/: README.md
src/beads_sorter/: __init__.py  main.py
src/cad/exports/: README.md
src/cad/parts/: README.md
src/firmware/: README.md
tests/: test_main.py
